--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
       - run: npm install
       - run: pwd 
       - run: ls 
-      - run: cd gitaction-demo
-      - run: pwd
+      - run: docker container ls
+ 
       
