--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,10 @@ jobs:
       - run: npm install
       - run: pwd 
       - run: ls 
-      - run: docker build . -t node-web-app
-      - run:  docker container run -itd -p 3600:8080 node-web-app
+      #- run: docker build . -t node-web-app
+     # - run:  docker container run -itd -p 3600:8080 node-web-app
+      - run: docker container ls 
+      - run: sudo apt install curl
       - run:  curl http://0.0.0.0:3600/
  
       
