--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,7 @@ jobs:
       - run: ls 
       
       - name: docker login
-        env:
-          DOCKER_USER: ${{secrets.DOCKER_USER}}
-          DOCKER_PASSWORD: ${{secrets.DOCKER_PASSWORD}}
-        run: |
-          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD 
+        run:  docker login -u ommore -p Omkar1523@
       - name: Build & push docker image 
         run: |
             pushDatetime=$(date +%b-%d-%H_%M_%S)
