--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Setup node
-      - run: echo hello 
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node }}
+      - run: npm install
 
 
  
