--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,27 +12,18 @@ on:
   pull_request:
     branches: [ main ]
     
+    
 jobs:
-  build:
-    name: Create Release
-    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false
-#           run: echo $tag_name
- 
+        uses: actions/github-script@v3
+          with:
+            github-token: ${{ github.token }}
+            script: |
+              github.git.createRef({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                ref: "refs/tags/tagname",
+                sha: context.sha
+              })
+
       
