--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,19 @@
-# This is a basic workflow to help you get started with Actions
+name: Releases
 
-name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+on: 
   push:
     tags:
-        - 'v*'
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-    
-    
-jobs:
-    steps:
-        uses: actions/github-script@v3
-          with:
-            github-token: ${{ github.token }}
-            script: |
-              github.git.createRef({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                ref: "refs/tags/tagname",
-                sha: context.sha
-              })
+    - '*'
 
+jobs:
+
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ncipollo/release-action@v1
+      with:
+        artifacts: "release.tar.gz,foo/*.txt"
+        bodyFile: "body.md"
+        token: ${{ secrets.GITHUB_TOKEN }}
       
