--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,15 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
-      - run: npm install
+#       - run: npm install
       
-      - name: ghcr login
-      - run: |
-           pushDatetime=$(date +%b-%d-%H_%M_%S)
-           echo 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 | docker login ghcr.io -u ommore1523 --password-stdin
+#       - name: ghcr login
+#       - run: |
+#            pushDatetime=$(date +%b-%d-%H_%M_%S)
+#            echo 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 | docker login ghcr.io -u ommore1523 --password-stdin
 
-      - name: Build & push docker image 
-      - run: |
-           docker build . -t ghcr.io/ommore1523/nodeapp:pushDatetime
-           docker push ghcr.io/ommore1523/nodeapp:pushDatetime
+#       - name: Build & push docker image 
+#       - run: |
+#            docker build . -t ghcr.io/ommore1523/nodeapp:pushDatetime
+#            docker push ghcr.io/ommore1523/nodeapp:pushDatetime
 
